// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containerClasses returns native version 1`] = `"grid__item one-whole one-half@palm-wide-and-up"`;

exports[`containerClasses returns non native version 1`] = `"grid__item one-whole"`;

exports[`iconClasses returns css class string 1`] = `"test-icon soft-half-right"`;

exports[`imageclasses returns array of css classes 1`] = `
Array [
  "background--fill",
  "card__image",
  "ratio--landscape",
]
`;

exports[`preloader renders 1`] = `
<div
  className="background--fill card__image ratio--landscape load-item_1vqkxyp"
/>
`;

exports[`renderElement renders 1`] = `
<div
  className="background--fill card__image ratio--landscape"
  style={
    Object {
      "backgroundImage": "url('http://test.com/1.jpg')",
    }
  }
/>
`;

exports[`renders with props 1`] = `
<div
  className="grid__item one-whole"
>
  <div
    className="card"
  >
    <Link
      className="plain"
      onClick={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to="http://test.com/1"
    >
      <ImageLoader
        preloader={[Function]}
        renderElement={[Function]}
        src="http://test.com/1.jpg"
        wrapper={[Function]}
      />
      <div
        className="card__item soft text-dark-tertiary"
      >
        <h4
          className="text-dark-primary capitalize"
        />
        <i
          className="test-icon soft-half-right"
        />
        <h7>
          test category
        </h7>
        <h7
          className="text-right float-right"
        >
          Dec 12, 2012
        </h7>
      </div>
    </Link>
  </div>
</div>
`;

exports[`test containerClasses returns native version 1`] = `"grid__item one-whole one-half@palm-wide-and-up"`;

exports[`test containerClasses returns non native version 1`] = `"grid__item one-whole"`;

exports[`test iconClasses returns css class string 1`] = `"test-icon soft-half-right"`;

exports[`test imageclasses returns array of css classes 1`] = `
Array [
  "background--fill",
  "card__image",
  "ratio--landscape",
]
`;

exports[`test preloader renders 1`] = `
<div
  className="background--fill card__image ratio--landscape load-item_1vqkxyp" />
`;

exports[`test renderElement renders 1`] = `
<div
  className="background--fill card__image ratio--landscape"
  style={
    Object {
      "backgroundImage": "url('http://test.com/1.jpg')",
    }
  } />
`;

exports[`test renders with props 1`] = `
<div
  className="grid__item one-whole">
  <div
    className="card">
    <Link
      className="plain"
      onClick={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to="http://test.com/1">
      <ImageLoader
        preloader={[Function]}
        renderElement={[Function]}
        src="http://test.com/1.jpg"
        wrapper={[Function]} />
      <div
        className="card__item soft text-dark-tertiary">
        <h4
          className="text-dark-primary capitalize" />
        <i
          className="test-icon soft-half-right" />
        <h7>
          test category
        </h7>
        <h7
          className="text-right float-right">
          Dec 12, 2012
        </h7>
      </div>
    </Link>
  </div>
</div>
`;
